--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
   <meta charset="utf-8">
 
-  <meta name="description" content="CSR Consulting">
+  <meta name="description" content="La Ferme Saint-Pierre">
 
-  <title>CSR Consulting</title>
+  <title>La Ferme Saint Pierre</title>
 
   <link rel="stylesheet" href="style.css">
 
@@ -18,7 +18,7 @@
 
     <div class="container">
 
-      <h4>CSR Consulting</h4>
+      <h4>La Ferme Saint Pierre</h4>
 
     </div>
 
@@ -26,23 +26,23 @@
 
   <div class="container">
 
-    <h2>Making companies sustainable for a better world</h2>
+    <h2>Être ensemble pour vivre heureux jusqu'à la fin de ses jours</h2>
 
       <div class="cards">
 
         <div class="card">
 
-          <img src="images/supply-chain.jpg" alt="Supply chain">
+          <img src="images/suite.png" alt="Suite">
 
-          <h3>Improvement of a sustainbale supply chain</h3>
+          <h3>Les suites</h3>
 
         </div>
 
         <div class="card">
 
-        <img src="images/CSR-report.jpg" alt="CSR Report">
+        <img src="images/CSR-jardin.jpg" alt="jardin">
 
-           <h3>Creating a CSR report for your company</h3>
+           <h3>Le jardin</h3>
 
         </div>
 
@@ -57,8 +57,8 @@ max-width:100%;
 white-space:nowrap;
 overflow:hidden;
 text-overflow:ellipsis;
-background-color:#33CC66;
-color:#000000;
+background-color:#ddd2c2;
+color:#6f7a5a;
 font-size:20px;
 border-radius:4px;
 padding:0 33px;
@@ -70,7 +70,7 @@ text-align:center;
 margin:0;
 text-decoration:none;
 ">Ask a quote</button>
-<script src="//embed.typeform.com/next/embed.js"></script>
+<script src="//https://n6dpllwu078.typeform.com/to/FhLK6z5U"></script>
 
 </body>
 
